Closed Bug 1907046 Opened 1 year ago Closed 1 year ago

HandleMethodCall() leaks GVariant

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
130 Branch
Tracking Status
firefox130 --- fixed

People

(Reporter: stransky, Assigned: stransky)

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/300b9438e1a2 [Linux] HandleMethodCall(): Release GVariant from g_variant_get_child_value() r=emilio
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: