Bug 1907046 [Linux] HandleMethodCall(): Release GVariant from g_variant_get_child_value() r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D216151